--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <section class="bio">
 
 <p>
-As they raised a beautiful family of four, their lives became a canvas of memories, with each stroke adding to the masterpiece of their shared experiences. Witnessing their children's growth and accomplishments, the couple discovered a renewed passion for creating beauty together. It wasn't long before they found solace and joy in the art of ceramics, a medium that allowed them to express their creativity and bond as a family.
+As they raised a beautiful family of four, their lives became a canvas of memories, with each stroke adding to the masterpiece of their shared experiences. Witnessing their children's growth and accomplishments, the couple discovered a passion for creating together. It wasn't long before they found solace and joy in the art of ceramics, a medium that allowed them to express their creativity and come together as a family.
 </p>
 <p>
-Ceramics became more than just a hobby; it became a shared language, a way to narrate their unique family tale. From the hands of the wife from Water Valley and the husband from Waskom emerged not just pottery, but tangible expressions of love, unity, and the richness of a life well-lived. Now, every piece they create tells a story – a story of love, resilience, and the shared joy of family outings that bring everyone together.
+Ceramics became more than just a hobby; it became a shared language, a way to narrate their unique family. From the hands of the wife from Water Valley, MS and the husband from Waskom, TX emerged not just pottery, but tangible expressions of love, unity, and the richness of a life well-lived. Now, every piece they create and share tells a story – a story of love, resilience, and the shared joy of family outings that bring everyone together.
 </p>
 <p>
-Join us on this creative journey, where every piece is a testament to the enduring power of love and the beauty that can emerge from the simple act of creating something together. Explore our collection and become a part of the narrative, where each ceramic creation carries the essence of a family united by passion and boundless creativity.
+Join us on this creative journey, where every piece is a testament to the enduring power of art and creation that can emerge from the simple act of creating something together. Explore our collection and become a part of the narrative, where each ceramic creation carries the essence of a family united by passion and boundless creativity.
 </p>
     </section>  
 
