--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <title>Sweeet Magnolia Clay Company</title>
-  <link rel="shortcut icon" href="assets/initials.jpg">
+  <link rel="shortcut icon" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
   <meta name="keywords" content="SWGC Portfolio">
