--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>Sweeet Magnolia Clay Company</title>
+  <title>Sweet Magnolia Clay Company</title>
   <link rel="shortcut icon" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
