--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Join us on this creative journey, where every piece is a testament to the enduri
 
 <section class="btn btn-alt btn-home">
   <div>
-    <a href="Gallery.html" class="btn btn-alt"> Photo Gallery</a>
+    <a href="gallery.html" class="btn btn-alt"> Photo Gallery</a>
 </div>
 <div>
 <a href="inventory.html" class="btn btn-alt">Inventory</a>
