--- a/index.html
+++ b/index.html
@@ -42,20 +42,16 @@ Join us on this creative journey, where every piece is a testament to the enduri
 </p>
     </section>  
 
-<section class="btn btn-alt btn-home">
-  <div>
-    <a href="gallery.html" class="btn btn-alt"> Photo Gallery</a>
-</div>
-<div>
-<a href="inventory.html" class="btn btn-alt">Inventory</a>
-</div>
-<div>
-  <a href="facebook.com" class="btn btn-alt"> Facebook</a>
-</div>
-<div>
-<a href="connect.html" class="btn btn-alt">Contact</a>
-</div>
-</section>
+    <section class="facebook">
+      <a href="https://www.facebook.com">
+        <img src="assets/facebook.webp" alt="Facebook Page"></a>
+    </section>
+
+    <section class="button-container">
+      <a href="gallery.html" class="button">Photo Gallery</a>
+      <a href="inventory.html" class="button">Inventory</a>
+      <a href="connect.html" class="button">Contact</a>
+    </section>
 
     
 </div>
