--- a/connect.html
+++ b/connect.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>SWGC Portfolio Contact</title>
-  <link rel="shortcut icon" href="assets/initials.jpg">
+  <title>Sweet Magnolia Clay Company</title>
+  <link rel="shortcut icon" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
   <meta name="keywords" content="SWGC Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
+
 
 <body>
 <header class="primary-header">
@@ -37,6 +38,10 @@
       </p>
       Email At -
       <a href="SweetMagnoliaClayCompany@gmail.com">SweetMagnoliaClayCompany@gmail.com</a>
+      </p>
+
+      <p>
+        Also visit the Polished Pearl Booth at Cotton Warehouse - 552 Highway 6 West Batesville, MS 38606
       </p>
     </div>
     </section>
@@ -114,6 +119,17 @@
       </div>
   </div>
 
+
+  <section class="facebook">
+    <a href="https://www.facebook.com">
+      <img src="assets/facebook.webp" alt="Facebook Page"></a>
+  </section>
+
+  <section class="button-container">
+    <a href="gallery.html" class="button">Photo Gallery</a>
+    <a href="inventory.html" class="button">Inventory</a>
+    <a href="connect.html" class="button">Contact</a>
+  </section>
 
 
 <footer class="primary-footer">
