--- a/gallery.html
+++ b/gallery.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>SWGC Portfolio</title>
-  <link rel="shortcut icon" href="assets/initials.jpg">
+  <title>Sweet Magnolia Clay Company</title>
+  <link rel="shortcut icon" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   <meta charset="utf-8">
   <meta name="keywords" content="SWGC Portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
+
 
 <body>
 <header class="primary-header">
@@ -22,29 +23,36 @@
       </nav>
 </header>
 
-<p>
-  Check out our gallery to see the fun events we have provided ceramics for!
-</p>
+<div class="gallery-container">
+  <p>
+    Check out our gallery to see the fun events we have provided ceramics for!
+  </p>
 
-<section class="gallery1">
-  <img src="assets/pic1.jpg" alt="">
-  <img src="assets/pic2.jpg" alt="">
+  <section class="event-gallery">
+    <h2>Christmas Office Party</h2>
+    <div class="image-container">
+      <img src="assets/pic1.jpg" alt="Event Photo 1">
+      <img src="assets/pic2.jpg" alt="Event Photo 2">
+      <!-- Add more images as needed -->
+    </div>
+  </section>
+
+  <p>
+    For inquiries or to book our services for your event, <a href="connect.html">contact us</a>.
+  </p>
+</div>
+
+
+<section class="facebook">
+  <a href="https://www.facebook.com" target="_blank">
+    <img src="assets/facebook.webp" alt="Facebook Page">
+  </a>
 </section>
 
-
-<section class="btn btn-alt btn-home">
-  <div>
-    <a href="Gallery.html" class="btn btn-alt"> Photo Gallery</a>
-</div>
-<div>
-<a href="inventory.html" class="btn btn-alt">Inventory</a>
-</div>
-<div>
-  <a href="facebook.com" class="btn btn-alt"> Facebook</a>
-</div>
-<div>
-<a href="connect.html" class="btn btn-alt">Contact</a>
-</div>
+<section class="button-container">
+  <a href="gallery.html" class="button">Photo Gallery</a>
+  <a href="inventory.html" class="button">Inventory</a>
+  <a href="connect.html" class="button">Contact</a>
 </section>
 
 <footer class="primary-footer container">
