--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       </section>
       <section class="bio">
 
+<h2 class="quote">
+  "Every child is an artist. The prolem is how to remain an artist once we grow up." - Pablo Picasso
+</h2>
+
 <p>
 As they raised a beautiful family of four, their lives became a canvas of memories, with each stroke adding to the masterpiece of their shared experiences. Witnessing their children's growth and accomplishments, the couple discovered a passion for creating together. It wasn't long before they found solace and joy in the art of ceramics, a medium that allowed them to express their creativity and come together as a family.
 </p>
