--- a/index.html
+++ b/index.html
@@ -23,44 +23,60 @@
       </nav>
 </header>
 
+<section class="contactpage">
+      <h2>
+        Connect With Us!
+      </h2>
+    <div>
+      <p>
+        Thanks for checking out our ceramics.
+        Feel free to reach out and contact to find out more for your event or family gathering!! 
+        <br>
+        Also, check out the links below to see my social media!
+        <br>
+      </p>
+      </p>
+      Fill out the form below and we will get back to you shortly!
+      </p>
 
-    <section class="intro">
-      </section>
-      <section class="logoimg">
-        <img src="assets/logo.png" alt="logo">
-      </section>
-      <section class="bio">
-
-<h2 class="quote">
-  "Every child is an artist. The prolem is how to remain an artist once we grow up." - Pablo Picasso
-</h2>
-
-<p>
-As they raised a beautiful family of four, their lives became a canvas of memories, with each stroke adding to the masterpiece of their shared experiences. Witnessing their children's growth and accomplishments, the couple discovered a passion for creating together. It wasn't long before they found solace and joy in the art of ceramics, a medium that allowed them to express their creativity and come together as a family.
-</p>
-<p>
-Ceramics became more than just a hobby; it became a shared language, a way to narrate their unique family. From the hands of the wife from Water Valley, MS and the husband from Waskom, TX emerged not just pottery, but tangible expressions of love, unity, and the richness of a life well-lived. Now, every piece they create and share tells a story – a story of love, resilience, and the shared joy of family outings that bring everyone together.
-</p>
-<p>
-Join us on this creative journey, where every piece is a testament to the enduring power of art and creation that can emerge from the simple act of creating something together. Explore our collection and become a part of the narrative, where each ceramic creation carries the essence of a family united by passion and boundless creativity.
-</p>
-    </section>  
-
-    <section class="facebook">
-      <a href="https://www.facebook.com">
-        <img src="assets/facebook.webp" alt="Facebook Page"></a>
+      <p>
+        Also visit the Polished Pearl Booth at Cotton Warehouse - 552 Highway 6 West Batesville, MS 38606
+      </p>
+    </div>
     </section>
 
-    <section class="button-container">
-      <a href="gallery.html" class="button">Photo Gallery</a>
-      <a href="inventory.html" class="button">Inventory</a>
-      <a href="connect.html" class="button">Contact</a>
-    </section>
+    <form action="mailto:chavezfamily14@yahoo.com" method="post" enctype="text/plain">
+      <label for="name">Your Name:</label>
+      <input type="text" id="name" name="name" required>
+  
+      <label for="email">Your Email:</label>
+      <input type="email" id="email" name="email" required>
+  
+      <label for="subject">Subject:</label>
+      <input type="text" id="subject" name="subject" required>
+  
+      <label for="message">Your Message:</label>
+      <textarea id="message" name="message" required></textarea>
+  
+      <button type="submit">Submit</button>
+    </form>
+  </section>
+  
+  <section class="googmap">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3295.691736246672!2d-89.9655556234685!3d34.30739897306209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88801d1fddfc852f%3A0xd22497bbeaf44dd4!2s550%20MS-6%2C%20Batesville%2C%20MS%2038606!5e0!3m2!1sen!2sus!4v1705865610130!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </section>
 
-    
-</div>
-</section>
 
+  <section class="facebook">
+    <a href="https://www.facebook.com">
+      <img src="assets/facebook.webp" alt="Facebook Page"></a>
+  </section>
+
+  <section class="button-container">
+    <a href="gallery.html" class="button">Photo Gallery</a>
+    <a href="inventory.html" class="button">Inventory</a>
+    <a href="connect.html" class="button">Contact</a>
+  </section>
 
 
 <footer class="primary-footer">
